--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -5,11 +5,9 @@ body * {
 .main-header{
   display: flex;
   flex-direction: column;
-  /* align-items: flex-end; */
   margin-left: 50%;
   margin-top: 4%;
   font-family: Poppins;
-  /* overflow: hidden; */
 }
 .logo{
   color: #fff;
@@ -43,7 +41,6 @@ body * {
   max-width: 250px;
 }
 .main-nav ul li {
-  padding: 5px 0;
   cursor: pointer;
   position: relative;
   /* border-bottom: 1px solid #323232; */
@@ -51,6 +48,15 @@ body * {
 }
 .main-nav ul li:first-child{
   border-top: 1px solid #323232;
+}
+.main-nav ul li a{
+  display: block;
+  padding: 10px 0;
+  text-decoration: none;
+  color: #fff;
+  opacity: 0.5;
+  font-size: 12px;
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), border-bottom 0.2s ease-in;
 }
 .main-nav ul li:after,
 .main-nav ul li:before{
@@ -89,11 +95,9 @@ body * {
   /* background-color: red; */
 }
 
-
-.main-nav ul li a{
-  text-decoration: none;
-  color: #fff;
-  opacity: 0.5;
-  font-size: 12px;
-  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), border-bottom 0.2s ease-in;
+.main-nav ul li a.active{
+  opacity: 1;
+  /* text-decoration: underline; */
+  background-color: rgba(200,200,200, 0.2);
+  padding-left: 10px;
 }
