--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -3,16 +3,111 @@ body * {
 }
 
 .main-header{
+  font-family: Poppins;
+  /* overflow: hidden; */
+  position: relative;
+  transition: all 0.7s ease-in-out;
+  max-height: 50px;
+}
+.animated-header{
   display: flex;
   flex-direction: column;
-  margin-left: 50%;
-  margin-top: 4%;
-  font-family: Poppins;
+  padding-left: 50%;
+  padding-top: 4%;
+  padding-bottom: 2%;
+  will-change: transform;
+  transition: all 0.7s ease-in-out;
+  transform: translateY(-100%);
 }
+.main-header::after{
+  content: 'псс... это затемнялка контента';
+  filter: blur(2px);
+  font-size: 60px;
+  color: rgb(23, 23, 23);
+  font-weight: 900;
+  text-transform: uppercase;
+  /* content: ''; */
+  background-color: rgb(63, 63, 63);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  z-index: -1;
+}
+.main-header::before{
+  content: '';
+  background-color: #323232;
+  height: 1px;
+  width: 100vw;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition: opacity 0.8s ease-in-out;
+  animation: scale-up-bottom 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+@keyframes scale-up-bottom {
+  0% {
+    transform: scale(0.2);
+    transform-origin: 0% 100%;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 50% 100%;
+  }
+}
+
+.menu-opened.main-header .animated-header{
+  transform: translateY(0);
+}
+.menu-opened.main-header {
+  max-height: 100vh;
+}
+.menu-opened.main-header::before{
+  opacity: 0;
+}
+.menu-opened.main-header::after{
+  display: block;
+  height: 100vh;
+  width: 100vw;
+  transform: translateY(100%);
+  animation: fadeIn;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+  animation-direction: alternate;
+  z-index: 10;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+
 .logo{
   color: #fff;
   text-decoration: none;
   display: block;
+  animation: focus-in-contract-bck 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+@keyframes focus-in-contract-bck {
+  0% {
+    letter-spacing: 1em;
+    transform: translateZ(300px);
+    filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateZ(12px);
+    filter: blur(0);
+    opacity: 1;
+  }
 }
 
 .logo__title{
@@ -100,4 +195,34 @@ body * {
   /* text-decoration: underline; */
   background-color: rgba(200,200,200, 0.2);
   padding-left: 10px;
+}
+
+.hamburger{
+  position: fixed;
+  top: 10px;
+  left: 20px;
+  padding: 3px 5px;
+  margin: 0;
+  border: 0;
+  background-color: transparent;
+  opacity: 0.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  border-radius: 10px;
+  outline: none;
+}
+
+.hamburger:hover {
+  opacity: 1;
+}
+
+.hamburger__text{
+  padding-left: 10px;
+  font-family: Comfortaa;
+  font-weight: 600;
+  font-size: 12px;
+  color: #fff;
 }
