--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,10 +3,6 @@ html {
   color: white;
 }
 
-.dots {
-  display: flex;
-}
-
 .button__thumbnails {
   display: none;
 }
@@ -16,4 +12,22 @@ html {
   position: fixed;
   left: 300px;
   top: 10px;
+}
+
+.dots {
+  display: flex;
+  flex: wrap;
+}
+
+.dots .thumbnail__button {
+  display: block;
+  width: calc(100%/8);
+}
+
+.thumbnail__button {
+  padding: 2px;
+  border-radius: 5px;
+  background: #000;
+  border: none;
+  outline: none;
 }
