--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -21,7 +21,8 @@ body * {
 }
 .main-header::after{
   content: 'псс... это затемнялка контента';
-  filter: blur(2px);
+  -webkit-filter: blur(2px);
+          filter: blur(2px);
   font-size: 60px;
   color: rgb(23, 23, 23);
   font-weight: 900;
@@ -35,6 +36,7 @@ body * {
   opacity: 0;
   z-index: -1;
 }
+
 .main-header::before{
   content: '';
   background-color: #323232;
@@ -45,7 +47,18 @@ body * {
   left: 0;
   right: 0;
   transition: opacity 0.8s ease-in-out;
-  animation: scale-up-bottom 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  -webkit-animation: scale-up-bottom 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+          animation: scale-up-bottom 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+@-webkit-keyframes scale-up-bottom {
+  0% {
+    transform: scale(0.2);
+    transform-origin: 0% 100%;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 50% 100%;
+  }
 }
 @keyframes scale-up-bottom {
   0% {
@@ -63,6 +76,8 @@ body * {
 }
 .menu-opened.main-header {
   max-height: 100vh;
+  z-index: 10;
+  background: #000;
 }
 .menu-opened.main-header::before{
   opacity: 0;
@@ -72,12 +87,25 @@ body * {
   height: 100vh;
   width: 100vw;
   transform: translateY(100%);
-  animation: fadeIn;
-  animation-duration: 1s;
-  animation-delay: 1s;
-  animation-fill-mode: forwards;
-  animation-direction: alternate;
+  -webkit-animation: fadeIn;
+          animation: fadeIn;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
   z-index: 10;
+}
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 @keyframes fadeIn {
   0% {
@@ -94,18 +122,36 @@ body * {
   color: #fff;
   text-decoration: none;
   display: block;
-  animation: focus-in-contract-bck 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  -webkit-animation: focus-in-contract-bck 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+          animation: focus-in-contract-bck 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+@-webkit-keyframes focus-in-contract-bck {
+  0% {
+    letter-spacing: 1em;
+    transform: translateZ(300px);
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateZ(12px);
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
 }
 @keyframes focus-in-contract-bck {
   0% {
     letter-spacing: 1em;
     transform: translateZ(300px);
-    filter: blur(12px);
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
     opacity: 0;
   }
   100% {
     transform: translateZ(12px);
-    filter: blur(0);
+    -webkit-filter: blur(0);
+            filter: blur(0);
     opacity: 1;
   }
 }
