--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,33 +7,46 @@ html {
   display: none;
 }
 
-.page-showcase .button__thumbnails {
-  display: block;
-  position: fixed;
-  left: 300px;
-  top: 10px;
-}
-
-.dots {
+.page-showcase .slick-dots {
   display: flex;
+  position: fixed;
+  top: 50px;
+  width: 100%;
   flex-wrap: wrap;
+  height: 70vh;
 }
 
-.dots .thumbnail__button {
-  display: block;
+.page-showcase .slick-dots li {
   height: 150px;
   width: auto;
-  max-width: calc(100%/8);
+  margin: 0;
+  border: 4px solid #000;
+  border-radius: 3px;
 }
 
-.thumbnail__button {
-  padding: 2px;
-  border-radius: 5px;
-  background: #000;
-  border: none;
-  outline: none;
-}
-
-.thumbnail__button img {
+.page-showcase .slick-dots li img {
   width: auto;
+  height: -webkit-fill-available;
+}
+
+.slick-slide {
+  border: 2px solid #000;
+}
+
+.page-showcase .slick-slide img {
+  width: auto;
+  height: -webkit-fill-available;
+}
+
+.page-main .slick-slide img {
+  width: 100%;
+}
+
+.page-main {
+  height: 100vh;
+  overflow: hidden;
+}
+
+.page-main header:after {
+  content: none;
 }
