--- a/src/components/tabs/tabs.module.css
+++ b/src/components/tabs/tabs.module.css
@@ -1,10 +1,10 @@
 .tabs{
   display: grid;
+  margin: 0 auto;
+  padding: 20px 25px 0;
   grid-template-columns: 40% 60%; 
-  grid-template-areas: 
-  "one three"
-  "two three";
-  align-items: flex-start;
+  grid-template-areas: "one three" "two three";
+  font-family: Poppins;
 }
 
 .tabs-content{
@@ -14,26 +14,58 @@
 .tabs-text{
   grid-area: two;
   grid-row-end: none;
+  font-family: Comfortaa;
+  line-height: 1.8;
 }
 
 .tabs-img{
   grid-area: three;
-
+}
+.tabs-img img{
+  /* max-width: 100%; */
+  width: 100%;
+  max-height: 80vh;
+  min-height: 300px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .tabs-list{
   list-style: none;
-  background-color: red;
+  margin: 0;
+  padding: 70px 70px 0 0;
 }
 
 .tabs-list__item{
 
 }
 
-.tabs-list__item-button{
-
+.tabs-list__item-link{
+  display: block;
+  color: #666;
+  text-decoration: none;
+  padding: 10px 0;
+  font-size: 13px;
+  position: relative;
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), border-bottom 0.2s ease-in;
 }
 
-.tabs-list__item-link{
-  background-color: blue;
+.tabs-list__item-link:hover{
+  color: #fff;
+}
+.tabs-list__item-link:hover:after{
+  background-color: #fff;
+}
+
+.tabs-list__item-link:after{
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #666;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), border-bottom 0.2s ease-in;
 }
