--- a/src/components/tabs/tabs.module.css
+++ b/src/components/tabs/tabs.module.css
@@ -16,6 +16,7 @@
   grid-row-end: none;
   font-family: Comfortaa;
   line-height: 1.8;
+  margin-right: 70px;
 }
 
 .tabs-img{
@@ -32,7 +33,7 @@
 
 .tabs-list{
   list-style: none;
-  margin: 0;
+  margin: 0 0 60px;
   padding: 70px 70px 0 0;
 }
 
